# agent-learning-report

./: .gitignore  PRODUCT.md  README.md  agent_architect_roadmap_2026.md  index.html  企业级Agent编排治理路线图.md
.github/workflows/: quality-gate.yml
agent-runtime-gateway/: DESIGN.md  PRODUCT.md  README.md  pytest.ini
agent-runtime-gateway/00-课程总览/: 00-唯一学习入口.md  Design-only产物包模板.md  RAG路线反思-2026-06-30.md  半懂学习者导航.md  学习者复述评分记录.md  学习路线图.md  岗位能力与毕业标准.md  工业级前置反思-2026-06-30.md  工程实战主线-v2.md  开始这里-半懂版.md  开课前最终核验-2026-07-01.md  开课前置核验报告-2026-06-29.md  教学平台真实缺口与演进台账-2026-07-13.md  教学构建循环.md  文件结构重构建议.md  最优教学步骤.md  术语表.md  权威资料索引.md  每节课互动模板.md  真实建议与高薪方向.md  第一天学习闸门.md  第一节课-用工单故事理解工业级Agent.md  缺口审计.md  能力地图.md  课程地图.md  非代码化工业级Agent设计学习协议.md  项目结构说明.md
agent-runtime-gateway/01-产品需求与路线/: MVP演示场景选择.md  产品需求文档.md  学习可视化前端PRD.md  架构决策记录.md  路线审核与反思-2026-06-29.md  需求追踪矩阵.md
agent-runtime-gateway/02-阶段教学手册/: Phase-00.1-半懂起步教学手册.md  Phase-02-最小运行时教学手册.md  Phase-03-Agent网关与工具治理教学手册.md  Phase-04-长线任务与断点恢复教学手册.md  Phase-05-MCP与工具生态教学手册.md  Phase-06-记忆系统教学手册.md  Phase-07-测评审核与红队教学手册.md  Phase-08-可观测性与审计教学手册.md  阶段验收清单.md  (+5 more)
agent-runtime-gateway/20-源码/: README.md  pyproject.toml
agent-runtime-gateway/20-源码/agent_course/: __init__.py  api.py  cli.py  contracts.py  evals.py  foundation.py  policy.py  rag.py  runtime.py  store.py  tools.py
data/: baseline_metrics.js  build_baseline_metrics.mjs  build_chapters.mjs  chapters.js  check_course_gate.mjs  check_learning_content.mjs  check_memory_content.mjs  course_gate.js  learning_content.js  memory_lab.js
scripts/: run_quality_gate.py
(+158 files in other folders)
